<?xml version="1.0"?>
<package format="2">
  <name>datafitting</name>
  <version>1.0.0</version>
  <description>Data fitting buffer by inter- and extrapolation</description>>
  <author>Philipp Berthold</author>
  <maintainer email="philipp.berthold@unibw.de">phbe</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>

