<?xml version="1.0"?>
<package format="2">
  <name>radar_pointcloud</name>
  <version>0.1.0</version>
  <description>Radar detections to Pointcloud2 accumulation</description>>
  <author>Philipp Berthold</author>
  <maintainer email="philipp.berthold@unibw.de">phbe</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>radar_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>radar_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>radar_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <depend>nav_msgs</depend>
  <depend>datafitting</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

</package>

