<?xml version="1.0"?>
<package format="3">
  <name>radar_pointcloud</name>
  <version>0.1.0</version>
  <description>Radar detections to Pointcloud2 accumulation</description>
  <author>Philipp Berthold</author>
  <maintainer email="philipp.berthold@unibw.de">phbe</maintainer>
  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>

  <depend>std_msgs</depend>
  <depend>radar_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>datafitting</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

</package>
