<?xml version="1.0"?>
<package format="2">
  <name>smartmicro_configurator</name>
  <version>2.1.0</version>
  <description>Smartmicro Systems (SMS) configuration tool for sensors based on the "High Performance Sensors Firmware"</description>>
  <author>Philipp Berthold</author>
  <maintainer email="philipp.berthold@unibw.de">phbe</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>can_msgs</depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>smartmicro_driver</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>smartmicro_driver</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>smartmicro_driver</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <depend>radar_msgs</depend>

</package>

